# Iron

./: .gitignore  .sconsign.dblite  CMakeLists.txt  OpenglLearn  SConstruct  build.sh  imgui.ini  list.h  loader.h  main  main.cpp  readme.md  tt.cpp
.trash/: main.cpp
asset/: Untitled.data  Untitled.pix  aa.csv  cube.ply  shader.vertex  test_format.ora  test_format.ora~  test_format.ply  tex.rgb  untitled.blend  untitled.blend1  untitled.ply
asset/shaders/: basic.fs  basic.vs  color.fs  screen_quad.fs  screen_quad_blur.fs  simple.vs  skybox.fs  skybox.vs  tex_quad.fs  tex_quad.vs
base/: loader.cpp  loader.h
core/: core_structure.cpp  core_structure.h  engine.h  gpu.cpp  gpu.h  gpu_structure.h  img.cpp  img.h  material.h  mesh.cpp  mesh.h  object.h  os.cpp  os.h  shader.cpp  shader.h  viewer.h
driver/: gl.h  glad.c  glad.h  iron_gl.cpp  iron_gl.h
imgui/: CMakeLists.txt
include/glad/: glad.h
utils/: camera.h  material.h
